it/dev/logstash-opensearch/logstash/ingress.yaml
---
# Source: logstash/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logstash-logstash
  labels:
    app: "logstash-logstash"
    chart: "logstash"
    heritage: "Helm"
    release: "logstash"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - collector.dev.lsst.local
      secretName: collector-tls
  rules:
  - host: collector.dev.lsst.local
    http:
      paths:
      - path: /beats
        pathType: ImplementationSpecific
        backend:
          service:
            name: logstash-logstash
            port:
              number: 5044
      - path: /http
        pathType: ImplementationSpecific
        backend:
          service:
            name: logstash-logstash
            port:
              number: 8080
